// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hide the relative selection when hideRelative is true 1`] = `
<Fragment>
  <label>
    <Switch
      checked={true}
      onChange={[Function]}
    />
    Show Absolute Value
  </label>
</Fragment>
`;

exports[`should match snapshot 1`] = `
<Fragment>
  <label>
    <Switch
      checked={true}
      onChange={[Function]}
    />
    Show Absolute Value
  </label>
  <label>
    <Switch
      checked={true}
      onChange={[Function]}
    />
    Show Relative Value
  </label>
</Fragment>
`;
